fix: misaligned public room title

--- a/packages/shared/components/navigation/Navigation.module.scss
+++ b/packages/shared/components/navigation/Navigation.module.scss
@@ -401,7 +401,7 @@
 
   grid-template-columns: 49px auto 1fr;
   &[data-with-logo="true"][data-is-frame="false"] {
-    grid-template-columns: 1fr 49px auto 1fr;
+    grid-template-columns: auto 49px auto 1fr;
   }
   &[data-with-logo="true"][data-is-frame="true"] {
     grid-template-columns: auto 49px auto 1fr;
@@ -417,7 +417,7 @@
     grid-template-columns: auto 1fr;
   }
   &[data-is-root-folder="true"][data-with-logo="true"][data-is-frame="false"] {
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: auto auto 1fr;
   }
   &[data-is-root-folder="true"][data-with-logo="true"][data-is-frame="true"] {
     grid-template-columns: auto auto 1fr;
